# Gamer_OS

./: AqiumBuilds.pro  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
src/: MainWindow.ui  System_Services.cpp  Window_Manager.cpp  app_search.cpp  gamer_compositor.c  gamer_starter.cpp  init_window.cpp  installer_dep.cpp  launchd.cpp  test
src/output/: init_window
xmb_dev/: CMakeLists.txt  Makefile  cmake_install.cmake  output_letters.txt  xmb-prototype
xmb_dev/src/: eg_builder.cpp  main.cpp  text.h  xmb_games.cpp  xmb_games.h
